adding warning to the top of each page to direct readers to docs site

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -278,6 +278,11 @@
 
             <div id="content" class="content">
                 <main>
+                    <blockquote>
+                        Warning: Some content may be outdated.
+                        See <a href="https://docs.wormhole.com">docs.wormhole.com</a>
+                        for up to date information
+                    </blockquote>
                     {{{ content }}}
                 </main>
 
